etc/Makefile: Add complxgen to all target

--- a/etc/Makefile
+++ b/etc/Makefile
@@ -1,4 +1,4 @@
-all:	realgen proffenv profmath testrand
+all:	complexgen realgen proffenv profmath testrand
 
 # -Wstrict-prototypes
 CC99=gcc -std=c99
